--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -1,4 +1,4 @@
-/*!* Main page *!*/
+
 /*body {*/
 /*    margin: 0;*/
 /*    padding: 0;*/
@@ -23,7 +23,7 @@
 /*.birdSide-bg-img {*/
 /*    display: block;*/
 /*    width: 100%;*/
-/*    height: 100%;*/
+/*    height: 100vh;*/
 /*}*/
 
 /*.birdSide-fr-img {*/
@@ -40,7 +40,7 @@
 
 /*.col {*/
 /*    width: 100%;*/
-/*    height: 711px;*/
+/*    height: auto;*/
 /*    display: flex;*/
 /*    flex-direction: column;*/
 /*    justify-content: center;*/
