Setup first working version of Router & autoloader
Deleted entire commented code.
Added some Frontend for Main page according to US-1.

US-1, "Backend and MVC" task

--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -1,4 +1,4 @@
-
+/*Main page*/
 body {
     margin: 0;
     padding: 0;
@@ -118,6 +118,7 @@ hr {
 
 .logIn-btn:hover {
     background-color: rgb(26, 140, 216);
+    transition-duration: 0.2s;
 }
 
 .SignUp-question {
@@ -151,4 +152,5 @@ hr {
 
 .SignUp-btn:hover {
     background-color: rgb(29, 150, 240, 0.1);
+    transition-duration: 0.2s;
 }
