--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -3,12 +3,24 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 1.125fr 1fr;
     height: 100vh;
+    padding: 0;
+}
+
+.col {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.col-lg-6 {
+    padding: 0;
 }
 
 .birdSide {
@@ -35,23 +47,15 @@ body {
 }
 
 .loginSide {
-    padding: 20px;
-}
-
-.col {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding: 0 20px;
 }
 
 h1 {
     font-size: 64px;
     font-weight: 800;
     letter-spacing: 2.2px;
-    margin-bottom: 48px;
-    margin-top: 48px;
+    margin-bottom: 38px;
+    margin-top: 38px;
 }
 
 h2 {
@@ -73,6 +77,7 @@ h2 {
     margin-bottom: 20px;
     border-style: solid;
     border-color: rgb(207, 217, 222);
+    text-indent: 12px;
 }
 
 #password {
@@ -82,6 +87,12 @@ h2 {
     margin-bottom: 20px;
     border-style: solid;
     border-color: rgb(207, 217, 222);
+    text-indent: 12px;
+}
+
+#username:focus,
+#password:focus {
+    border-color: rgb(29, 155, 240);
 }
 
 .or {
@@ -124,7 +135,7 @@ hr {
 .SignUp-question {
     display: flex;
     justify-content: space-between;
-    padding: 40px 0 15px;
+    padding: 30px 0 15px;
     font-weight: 700;
 }
 
@@ -153,4 +164,49 @@ hr {
 .SignUp-btn:hover {
     background-color: rgb(29, 150, 240, 0.1);
     transition-duration: 0.2s;
+}
+
+.SignUp-agreement {
+    line-height: 12px;
+    font-size: 11px;
+    font-weight: 400;
+    width: 300px;
+}
+
+footer {
+    display: flex;
+    justify-content: left;
+    padding: 40px 20px 20px 10px;
+}
+
+.Footer-spans {
+    font-size: 13px;
+    cursor: pointer;
+    font-weight: 400;
+    padding: 16px 16px 0 0;
+    color: rgb(83, 100, 113);
+}
+
+.Footer-spans:hover {
+    text-decoration-thickness: 1px;
+    text-decoration-line: underline;
+    outline-style: none;
+}
+
+@media (max-width: 1000px) {
+    .row {
+        flex-direction: column-reverse;
+    }
+
+    .loginSide {
+        order: 2;
+    }
+
+    .birdSide-bg-img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 }
