Task - Explore page !inprogress
Added markup, styling, grid and columns
US-8, US-1

--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -1,25 +1,21 @@
-/*Main page*/
 body {
     margin: 0;
     padding: 0;
     font-family: 'Work Sans', sans-serif;
     overflow-x: hidden;
 }
-
+/*     MAIN PAGE     */
 .grid-container {
     display: grid;
     height: 100vh;
     padding: 0;
 }
 
-.col {
+.main-page-columns {
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.col-lg-6 {
     padding: 0;
 }
 
@@ -185,6 +181,7 @@ footer {
     font-weight: 400;
     padding: 16px 16px 0 0;
     color: rgb(83, 100, 113);
+    text-decoration: none;
 }
 
 .Footer-spans:hover {
@@ -193,8 +190,10 @@ footer {
     outline-style: none;
 }
 
+
+
 @media (max-width: 1000px) {
-    .row {
+    .main-page-row {
         flex-direction: column-reverse;
     }
 
@@ -209,4 +208,43 @@ footer {
         background-size: cover;
         background-repeat: no-repeat;
     }
+}
+
+ /*     Explore page     */
+.left-sidebar-container {
+    display: grid;
+    height: 100vh;
+    padding: 0;
+}
+
+.left-sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-bottom: 2px;
+    padding-top: 2px;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.tweet-feed-column {
+
+}
+
+.right-sidebar {
+
+}
+
+.tweet-feed-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 53px;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.right-sidebar-question {
+    font-weight: 700;
+    font-size: 20px;
 }
