--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -66,17 +66,7 @@ h2 {
     flex-direction: column;
 }
 
-#username {
-    height: 44px;
-    width: 300px;
-    border-radius: 24px;
-    margin-bottom: 20px;
-    border-style: solid;
-    border-color: rgb(207, 217, 222);
-    text-indent: 12px;
-}
-
-#password {
+#username, #password {
     height: 44px;
     width: 300px;
     border-radius: 24px;
@@ -190,8 +180,6 @@ footer {
     outline-style: none;
 }
 
-
-
 @media (max-width: 1000px) {
     .main-page-row {
         flex-direction: column-reverse;
@@ -210,8 +198,8 @@ footer {
     }
 }
 
- /*     Explore page     */
-.left-sidebar-container {
+ /*     EXPLORE PAGE     */
+.explore-container {
     display: grid;
     height: 100vh;
     padding: 0;
@@ -226,25 +214,87 @@ footer {
     font-weight: 700;
     font-size: 20px;
 }
-
-.tweet-feed-column {
-
+.left-sidebar-anchor {
+    text-decoration: none;
+    color: #333;
+    padding: 14px;
 }
 
-.right-sidebar {
+.sidebar-icon-anchor {
+    padding: 0 7px;
+}
 
+.left-sidebar-anchor:hover,
+.sidebar-icon-anchor:hover
+{
+    cursor: pointer;
+    background-color: rgb(15, 20, 25, 0.1);
+    transition-duration: 0.2s;
+    border-radius: 9999px;
+}
+
+.tweet-feed-column {
+    border-style: solid;
+    border-right-width: 1px;
+    border-left-width: 1px;
+    border-color: rgb(239, 243, 244);
+    padding: 0;
 }
 
 .tweet-feed-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
     height: 53px;
     font-weight: 700;
     font-size: 20px;
+    width: 100%;
+    padding: 0 12px;
+}
+
+.tweet-feed-header:hover {
+    background-color: rgb(0, 0, 0, 0.03);
+    transition-duration: 0.2s;
+}
+
+.right-sidebar {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 30px;
+}
+
+.right-sidebar-functionality {
+    display: flex;
+    flex-direction: column;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(239, 243, 244);
+    border-radius: 16px;
+    max-width: 350px;
+    min-width: 290px;
+    padding: 0 25px 12px;
+    min-height: 380px;
+    max-height: 546px;
 }
 
 .right-sidebar-question {
     font-weight: 700;
     font-size: 20px;
+    padding: 12px 0;
+}
+
+.right-sidebar-SignUp-btn {
+    margin: 12px 0 10px;
+}
+
+.right-sidebar-logIn-functionality {
+    height: 42px;
+    width: 300px;
+    border-radius: 24px;
+    border-style: solid;
+    border-color: rgb(207, 217, 222);
+    text-indent: 12px;
+    margin: 0 0 12px;
+    padding: 0;
 }
