--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -352,7 +352,7 @@ footer {
 }
 
 .modal-h1 {
-    padding: 20px 0 0;
+    padding: 20px 0;
     font-size: 31px;
     line-height: 36px;
     font-weight: 700;
@@ -370,12 +370,7 @@ footer {
 }
 
 .modal-name_box2, .modal-email_box2 {
-    margin: 16px 0 0;
-    padding: 12px 0 8px;
-}
 
-.namebox-label, .emailbox-label {
-    width: 100%;
 }
 
 .name-input, .email-input {
@@ -384,20 +379,61 @@ footer {
     border-radius: 4px;
     border-style: solid;
     border-color: rgb(207, 217, 222);
+    border-width: 1px;
     font-size: 17px;
     text-indent: 6px;
-
+    margin: 10px 0 0;
+    padding: 12px 0 8px;
 }
 
 .name-input:focus,
 .email-input:focus {
     border-color: rgb(29, 155, 240);
-    box-shadow: rgb(29, 155, 240) 0 0 0 0.5px;
+    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
     outline: none;
 }
 
 .DOBPhrase {
-    padding: 20px 0;
+    padding: 20px 0 0;
+    font-weight: 700;
+    font-size: 15px;
+    margin: 0 0 4px;
+}
+
+.modal-warning {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 4px;
+    color: rgb(83, 100, 113);
+}
+
+.modal_date-pickers {
+    margin: 16px 0;
+}
+
+.modal-step1_footer {
+    display: flex;
+    justify-content: center;
+    border-top: none;
+    padding: 0 80px;
+}
+
+.modal-next-btn {
+    width: 100%;
+    border-radius: 24px;
+    background-color: rgb(29, 155, 240);
+    color: #fff;
+    letter-spacing: -0.5px;
+    margin: 24px 0;
+    min-height: 52px;
+    border-style: none;
+    font-weight: 700;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.modal-next-btn:hover {
+    transition-duration: 0.2s;
 }
 
 
