--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -369,10 +369,6 @@ footer {
     padding: 12px 0;
 }
 
-.modal-name_box2, .modal-email_box2 {
-
-}
-
 .name-input, .email-input {
     width: 100%;
     height: 100%;
@@ -382,7 +378,7 @@ footer {
     border-width: 1px;
     font-size: 17px;
     text-indent: 6px;
-    margin: 10px 0 0;
+    margin: 14px 0 0;
     padding: 12px 0 8px;
 }
 
@@ -408,7 +404,28 @@ footer {
 }
 
 .modal_date-pickers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin: 16px 0;
+}
+
+.date-picker-form {
+    font-size: 13px;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: rgb(207, 217, 222);
+    border-width: 1px;
+    padding: .375rem 5.15rem 1.375rem .75rem;
+    color: rgb(83, 100, 113);
+
+}
+
+.date-picker-form:hover {
+    border-color: rgb(29, 155, 240);
+    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
+    outline: none;
+    color: rgb(29, 155, 240);
 }
 
 .modal-step1_footer {
@@ -435,6 +452,7 @@ footer {
 .modal-next-btn:hover {
     transition-duration: 0.2s;
 }
+
 
 
 
