--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -143,7 +143,6 @@ hr {
     margin-bottom: 8px;
     height: 40px;
     font-size: 17px;
-    letter-spacing: -0.5px;
     cursor: pointer;
 }
 
@@ -198,31 +197,230 @@ footer {
     }
 }
 
- /*     EXPLORE PAGE     */
+/*     Main page - SignUp Modal Window   */
+/*     Step 1                */
+.modal-dialog-steps {
+    --bs-modal-width: 600px;
+}
+
+.modal-steps_content {
+    max-height: 90vh;
+    height: 650px;
+    min-width: 600px;
+    max-width: 800px;
+    overflow: hidden;
+    border-radius: 16px;
+    padding: 0;
+    margin: 0;
+}
+
+.modal-steps_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    border-bottom: none;
+    --bs-modal-header-padding: 8px 0 0 8px;
+    margin-bottom: 9px;
+
+}
+.modal-closer,
+.modal-backer {
+    padding: 6px;
+    width: 36px;
+    height: 36px;
+}
+
+.modal-closer:hover,
+.modal-backer:hover {
+    cursor: pointer;
+    background-color: rgb(15, 20, 25, 0.1);
+    transition-duration: 0.2s;
+    border-radius: 9999px;
+}
+
+.modal-h2 {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 0;
+    padding: 0 28px 0;
+}
+
+.modal-steps-body {
+    display: flex;
+    flex-direction: column;
+    padding: 0 80px;
+}
+
+.modal-h1 {
+    padding: 20px 0;
+    font-size: 31px;
+    line-height: 36px;
+    font-weight: 700;
+    margin-bottom: 0;
+}
+
+.modal_date-pickers {
+    display: flex;
+    flex-direction: row;
+}
+
+.modal-name_box,
+.modal-email_box {
+    padding: 12px 0;
+}
+
+.name-input,
+.email-input,
+.password-creator {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: rgb(207, 217, 222);
+    border-width: 1px;
+    font-size: 17px;
+    text-indent: 6px;
+    margin: 14px 0 0;
+    padding: 12px 0 8px;
+}
+
+.name-input:focus,
+.email-input:focus,
+.password-creator:focus {
+    border-color: rgb(29, 155, 240);
+    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
+    outline: none;
+}
+
+.DOBPhrase {
+    padding: 20px 0 0;
+    font-weight: 700;
+    font-size: 15px;
+    margin: 0 0 4px;
+}
+
+.modal-warning {
+    font-weight: 400;
+    font-size: 14px;
+    margin: 0 0 4px;
+    color: rgb(83, 100, 113);
+}
+
+.modal_date-pickers {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 16px 0;
+}
+
+.date-picker-form {
+    font-size: 13px;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: rgb(207, 217, 222);
+    border-width: 1px;
+    padding: .375rem 5.15rem 1.375rem .75rem;
+
+}
+
+.date-picker-form:focus {
+    border-color: rgb(29, 155, 240);
+    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
+    color: rgb(29, 155, 240);
+    outline: none;
+
+}
+
+.option-enabled {
+    color: #333333;
+}
+
+.modal-steps_footer {
+    display: flex;
+    justify-content: center;
+    border-top: none;
+    padding: 0 80px;
+}
+
+.modal-next-btn {
+    width: 100%;
+    border-radius: 24px;
+    background-color: rgb(29, 155, 240);
+    color: #fff;
+    letter-spacing: -0.5px;
+    margin: 24px 0;
+    min-height: 52px;
+    border-style: none;
+    font-weight: 700;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.modal-next-btn:hover {
+    transition-duration: 0.2s;
+}
+
+/*        Step 2         */
+.modal-backer {
+    padding: 6px;
+    width: 36px;
+    height: 36px;
+}
+
+.modal-backer:hover {
+    cursor: pointer;
+    background-color: rgb(15, 20, 25, 0.1);
+    transition-duration: 0.2s;
+    border-radius: 9999px;
+}
+
+/*        Step 3         */
+
+.modal-final-body {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+ /*     LEFT-SIDE BAR FOR EXPLORE/MAIN/PROFILE PAGES     */
 .explore-container {
     display: grid;
     height: 100vh;
     padding: 0;
 }
 
-.left-sidebar {
+.left-sidebar-box {
     display: flex;
     flex-direction: column;
+    padding: 0 0 0 55px;
     align-items: flex-start;
-    padding-bottom: 2px;
-    padding-top: 2px;
-    font-weight: 700;
+    font-weight: 400;
     font-size: 20px;
 }
+
 .left-sidebar-anchor {
     text-decoration: none;
     color: #333;
     padding: 14px;
 }
 
-.sidebar-icon-anchor {
-    padding: 0 7px;
+.sidebar-anchor {
+    display: flex;
+    flex-direction: row;
 }
+
+.sidebar-icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-span {
+    margin-right: 16px;
+    margin-left: 20px;
+}
+
 
 .left-sidebar-anchor:hover,
 .sidebar-icon-anchor:hover
@@ -298,166 +496,6 @@ footer {
     margin: 0 0 12px;
     padding: 0;
 }
-
-/*     SignUp Modal Window   */
-/*     Step 1                */
-.modal-dialog-steps {
-    --bs-modal-width: 600px;
-}
-
-.modal-steps_content {
-    max-height: 90vh;
-    height: 650px;
-    min-width: 600px;
-    max-width: 800px;
-    overflow: hidden;
-    border-radius: 16px;
-    padding: 0;
-    margin: 0;
-}
-
-.modal-step1_header {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    border-bottom: none;
-    --bs-modal-header-padding: 8px 0 0 8px;
-    margin-bottom: 9px;
-
-}
-.modal-closer {
-    padding: 6px;
-    width: 36px;
-    height: 36px;
-}
-
-.modal-closer:hover {
-    cursor: pointer;
-    background-color: rgb(15, 20, 25, 0.1);
-    transition-duration: 0.2s;
-    border-radius: 9999px;
-}
-
-.modal-h2 {
-    font-size: 20px;
-    font-weight: 700;
-    margin-bottom: 0;
-    padding: 0 28px 0;
-}
-
-.modal-step1-body {
-    display: flex;
-    flex-direction: column;
-    padding: 0 80px;
-}
-
-.modal-h1 {
-    padding: 20px 0;
-    font-size: 31px;
-    line-height: 36px;
-    font-weight: 700;
-    margin-bottom: 0;
-}
-
-.modal_date-pickers {
-    display: flex;
-    flex-direction: row;
-}
-
-.modal-name_box,
-.modal-email_box {
-    padding: 12px 0;
-}
-
-.name-input, .email-input {
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    border-style: solid;
-    border-color: rgb(207, 217, 222);
-    border-width: 1px;
-    font-size: 17px;
-    text-indent: 6px;
-    margin: 14px 0 0;
-    padding: 12px 0 8px;
-}
-
-.name-input:focus,
-.email-input:focus {
-    border-color: rgb(29, 155, 240);
-    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
-    outline: none;
-}
-
-.DOBPhrase {
-    padding: 20px 0 0;
-    font-weight: 700;
-    font-size: 15px;
-    margin: 0 0 4px;
-}
-
-.modal-warning {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0 0 4px;
-    color: rgb(83, 100, 113);
-}
-
-.modal_date-pickers {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 16px 0;
-}
-
-.date-picker-form {
-    font-size: 13px;
-    border-radius: 4px;
-    border-style: solid;
-    border-color: rgb(207, 217, 222);
-    border-width: 1px;
-    padding: .375rem 5.15rem 1.375rem .75rem;
-
-}
-
-.date-picker-form:focus {
-    border-color: rgb(29, 155, 240);
-    box-shadow: rgb(29, 155, 240) 0 0 0 1px;
-    color: rgb(29, 155, 240);
-    outline: none;
-
-}
-
-.option-enabled {
-    color: #333333;
-}
-
-.modal-step1_footer {
-    display: flex;
-    justify-content: center;
-    border-top: none;
-    padding: 0 80px;
-}
-
-.modal-next-btn {
-    width: 100%;
-    border-radius: 24px;
-    background-color: rgb(29, 155, 240);
-    color: #fff;
-    letter-spacing: -0.5px;
-    margin: 24px 0;
-    min-height: 52px;
-    border-style: none;
-    font-weight: 700;
-    cursor: pointer;
-    font-size: 17px;
-}
-
-.modal-next-btn:hover {
-    transition-duration: 0.2s;
-}
-
-/*     Step 2         */
 
 
 
