--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -384,7 +384,7 @@ footer {
     text-align: center;
 }
 
-/*     LEFT-SIDE BAR FOR EXPLORE/MAIN/PROFILE PAGES     */
+/*     LEFT-SIDE BAR      */
 .PageContainer {
     display: grid;
     height: 100vh;
@@ -451,17 +451,32 @@ footer {
     color: #fff;
 }
 
+.tweet-modal-btn {
+    border-style: none;
+    border-radius: 9999px;
+    width: 100px;
+    height: 36px;
+    margin: 0 12px;
+    background-color: rgb(29, 155, 240);
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    color: #fff;
+}
+
+.tweet-btn:hover,
+.tweet-modal-btn:hover {
+    transition-duration: 0.2s;
+    background-color: rgb(26, 140, 216);
+}
+
 .sidebar-user {
     display: flex;
     flex-direction: column;
+    padding: 0 12px;
     font-size: 15px;
     font-weight: 400;
-    padding: 0 12px;
-}
-
-.tweet-btn:hover {
-    transition-duration: 0.2s;
-    background-color: rgb(26, 140, 216);
 }
 
 .left-userbar-anchor {
@@ -491,6 +506,33 @@ footer {
     height: 40px;
 }
 
+.tweet-modal-content {
+    overflow: hidden;
+    margin: 0;
+    border-radius: 16px;
+    max-width: 800px;
+    max-height: 60vh;
+    min-width: 600px;
+    height: 325px;
+    padding: 0;
+}
+
+.tweet-modal-footer {
+    display: flex;
+    justify-content: space-between;
+    border-top-width: 1px;
+    border-top: none;
+    padding: 8px;
+}
+
+.tweet-modal-svg:hover {
+    transition-duration: 0.2s;
+    border-radius: 9999px;
+    background-color: rgb(29, 155, 240, 0.1);
+    cursor: pointer;
+}
+
+
 /*TWEET FEED */
 .TweetFeedColumn {
     border-style: solid;
@@ -516,6 +558,8 @@ footer {
     transition-duration: 0.2s;
     background-color: rgb(0, 0, 0, 0.03);
 }
+
+
 
 /* Right sidebar */
 
