--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -230,14 +230,39 @@ footer {
 }
 
 .modal-closer,
-.modal-backer {
+.modal-backer,
+.modal-feed-backer {
     width: 36px;
     height: 36px;
     padding: 6px;
 }
 
+.userheader-info {
+    display: flex;
+    flex-direction: column;
+    padding: 0 30px;
+}
+
+.username-feed {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.envelope {
+    background-color: rgb(207, 217, 222);
+    width: 100%;
+    height: 258px;
+}
+
+.tweets-amount {
+    font-size: 13px;
+    font-weight: 400;
+    color: rgb(83, 100, 113);
+}
+
 .modal-closer:hover,
-.modal-backer:hover {
+.modal-backer:hover,
+.modal-feed-backer:hover {
     transition-duration: 0.2s;
     border-radius: 9999px;
     background-color: rgb(15, 20, 25, 0.1);
@@ -268,14 +293,23 @@ footer {
 .modal-name-box,
 .modal-email-box,
 .modal-username-box {
-    padding: 12px 0;
+    padding: 0 0;
+    color: rgb(83, 100, 113);
+}
+.modal-name-box:active,
+.modal-email-box:active,
+.modal-username-box:active {
+    color: rgb(29, 155, 240);
 }
 
-.name-input,
+.fullname-input,
 .email-input,
 .password-creator,
-.username-input {
-    margin: 14px 0 0;
+.username-input,
+.bio-input,
+.location-input,
+.web-site-input {
+    margin: 0 0 0;
     border-style: solid;
     border-width: 1px;
     border-radius: 4px;
@@ -284,13 +318,16 @@ footer {
     height: 100%;
     padding: 12px 0 8px;
     font-size: 17px;
-    text-indent: 6px;
+    text-indent: 2px;
 }
 
-.name-input:focus,
+.fullname-input:focus,
 .email-input:focus,
 .password-creator:focus,
-.username-input:focus {
+.username-input:focus,
+.bio-input:focus,
+.location-input:focus,
+.web-site-input:focus {
     box-shadow: rgb(29, 155, 240) 0 0 0 1px;
     border-color: rgb(29, 155, 240);
     outline: none;
@@ -377,7 +414,6 @@ footer {
 }
 
 /*        Step 3         */
-
 .modal-final-body {
     display: flex;
     justify-content: center;
@@ -506,6 +542,15 @@ footer {
     height: 40px;
 }
 
+.tweet-modal-body {
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+}
+
+.tweet-modal-textarea {
+    margin: 12px 0;
+}
+
 .tweet-modal-content {
     overflow: hidden;
     margin: 0;
@@ -515,6 +560,22 @@ footer {
     min-width: 600px;
     height: 325px;
     padding: 0;
+}
+
+.tweet-modal-for {
+    border-radius: 9999px;
+    border-color: rgb(223, 230, 234);
+    background-color: #fff;
+    color: rgb(26, 140, 216);
+}
+.tweet-modal-for:hover {
+    transition-duration: 0.2s;
+    background-color: rgb(29, 150, 240, 0.1);
+    color: rgb(26, 140, 216);
+    border-color: rgb(223, 230, 234);
+    --bs-btn-active-color: rgb(26, 140, 216);
+    --bs-btn-active-bg: rgb(29, 150, 240, 0.2);
+    --bs-btn-active-border-color: rgb(223, 230, 234);
 }
 
 .tweet-modal-footer {
@@ -532,6 +593,16 @@ footer {
     cursor: pointer;
 }
 
+.tweet-modal-textarea {
+    overflow-x: hidden;
+    border-radius: 0;
+    border-width: 0;
+    max-height: 720px;
+    min-height: 24px;
+    padding: 0;
+    cursor: text;
+    font-weight: 400;
+}
 
 /*TWEET FEED */
 .TweetFeedColumn {
@@ -542,9 +613,22 @@ footer {
     padding: 0;
 }
 
+.home-feed-header,
+.explore-feed-header,
+.anonexplore-feed-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 53px;
+    padding: 0 12px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 700;
+}
+
 .tweet-feed-header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 53px;
@@ -559,10 +643,7 @@ footer {
     background-color: rgb(0, 0, 0, 0.03);
 }
 
-
-
 /* Right sidebar */
-
 .RightSidebar {
     display: flex;
     flex-direction: column;
@@ -604,5 +685,85 @@ footer {
     text-indent: 12px;
 }
 
+.user-profile-box {
+    display: flex;
+}
 
+.user-profile-icon {
+    z-index: 1;
+    transform: translateX(0%) translateY(-50%);
+    position: absolute;
+    width: 146px;
+    height: 146px;
+}
 
+.modal-profile-window {
+    overflow: hidden;
+    margin: 0;
+    border-radius: 16px;
+    max-width: 800px;
+    max-height: 90vh;
+    min-width: 600px;
+    height: 650px;
+    padding: 0;
+}
+
+.profile-info-header {
+    display: flex;
+    justify-content: space-between;
+    margin: 9px;
+    border-bottom: none;
+}
+
+.profile-info-header-left {
+    display: flex;
+    justify-content: center;
+}
+
+.changeinfo-btn-box {
+    display: flex;
+    justify-content: flex-end;
+    padding: 12px 16px;
+}
+.changeinfo-btn {
+    justify-self: flex-end;
+    border-style: solid;
+    border-radius: 9999px;
+    border-color: rgb(207, 217, 222);
+    border-width: 1px;
+    width: 170px;
+    height: 36px;
+    background-color: rgba(0, 0, 0, 0);
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    color: rgb(15, 20, 25);
+}
+
+.save-info-btn {
+    background-color: black;
+    color: white;
+    border-radius: 9999px;
+    border-style: none;
+    width: 110px;
+    height: 32px;
+}
+
+.envelope-modal {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 160px;
+}
+
+.modal-profile-fullname {
+    margin: 75px 0;
+}
+
+.modal-profile-bio {
+    margin: 25px 0;
+}
+
+.bio-input {
+
+}
