--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -57,7 +57,7 @@ form {
     margin-top: 38px;
     font-size: 64px;
     font-weight: 800;
-    letter-spacing: 2.2px;
+    letter-spacing: 2px;
 }
 
 .loginSide-h2 {
@@ -243,7 +243,7 @@ footer {
     padding: 0 30px;
 }
 
-.username-feed {
+.username-header {
     font-size: 20px;
     font-weight: 700;
 }
@@ -251,7 +251,7 @@ footer {
 .envelope {
     background-color: rgb(207, 217, 222);
     width: 100%;
-    height: 258px;
+    height: 218px;
 }
 
 .tweets-amount {
@@ -638,7 +638,7 @@ footer {
     font-weight: 700;
 }
 
-.tweet-feed-header {
+.profile-feed-header {
     display: flex;
     align-items: center;
     width: 100%;
@@ -648,10 +648,88 @@ footer {
     font-size: 20px;
     font-weight: 700;
 }
-
-.tweet-feed-header:hover {
+.profile-feed-header:hover {
     transition-duration: 0.2s;
     background-color: rgb(0, 0, 0, 0.03);
+}
+
+.profile-userbar {
+    display: flex;
+    flex-direction: column;
+    padding: 6px 12px;
+}
+
+.profile-userbar-fullname {
+    font-weight: 800;
+    font-size: 24px;
+}
+
+.profile-userbar-username {
+    font-size: 15px;
+    font-weight: 400;
+    color: rgb(83, 100, 113);
+}
+
+.profile-registeration-date {
+    font-size: 15px;
+    font-weight: 400;
+    padding: 0 12px 12px;
+    color: rgb(83, 100, 113);
+}
+.profile-calendar {
+    padding-bottom: 2px;
+}
+
+.profile-follow-bar {
+    padding: 0 12px;
+}
+
+.numFollows,
+.numFollowers {
+    font-weight: 700;
+    color: rgb(15, 20, 25);
+}
+
+.profile-follows,
+.profile-followers {
+    margin-right: 20px;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(83, 100, 113);
+    cursor: pointer;
+}
+.profile-follows:hover,
+.profile-followers:hover {
+    text-decoration-line: underline;
+    text-decoration-color: rgb(15, 20, 25);
+}
+
+.profile-fillet {
+    display: flex;
+    flex-direction: column;
+}
+
+.nav-fillet {
+    justify-content: space-around;
+}
+
+.fillet-item {
+    padding: 12px 12px;
+}
+
+.fillet-link {
+    color: rgb(83, 100, 113);
+}
+.fillet-link:hover {
+    color: rgb(83, 100, 113);
+}
+.fillet-link:focus {
+    font-weight: 700;
+    color: rgb(29, 155, 240);
+}
+
+.fillet-span:focus {
+    color: rgb(83, 100, 113);
 }
 
 /* Right sidebar */
