--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -912,15 +912,21 @@ footer {
 }
 
 .tweet-feed {
-    margin-top: 10px;
+    margin-top: 20px;
+    border-top-style: solid;
+    border-width: 1px;
+    border-color: rgb(83, 100, 113, 0.1);
 }
+
 .tweet-box {
     margin-top: 30px;
 }
+
 .tweet-box-fullname {
     font-size: 15px;
     font-weight: 700;
 }
+
 .tweet-box-username {
     font-size: 15px;
     font-weight: 400;
