--- a/dotwitter/public/styles.css
+++ b/dotwitter/public/styles.css
@@ -82,8 +82,13 @@ form {
     text-indent: 12px;
 }
 
-#username-login:focus,
-#password-login:focus {
+.username-login-box:focus-within #username-login {
+     outline: none !important;
+     border-color: rgb(29, 155, 240);
+ }
+
+.username-password-box:focus-within #password-login {
+    outline: none !important;
     border-color: rgb(29, 155, 240);
 }
 
@@ -666,6 +671,51 @@ footer {
     font-weight: 700;
 }
 
+.explore-header-search {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+.explore-input-search {
+    border-bottom-right-radius: 24px;
+    border-top-right-radius: 24px;
+    border-style: solid solid solid none;
+    border-width: 1px 1px 1px 0;
+    border-color: rgb(239, 243, 244);
+    width: 420px;
+    height: 44px;
+    text-indent: 12px;
+    background-color: rgb(239, 243, 244);
+    color: rgb(83, 100, 113);
+    font-size: 15px;
+}
+.explore-header-search-icon {
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: 24px;
+    border-top-left-radius: 24px;
+    border-style: solid none solid solid;
+    border-width: 1px 0 1px 1px;
+    border-color: rgb(239, 243, 244);
+    width: 50px;
+    height: 44px;
+    background-color: rgb(239, 243, 244);
+    color: rgb(83, 100, 113);
+    cursor: pointer;
+}
+.input-group:focus-within .explore-header-search-icon,
+.explore-header-search-icon:focus-within .explore-input-search {
+    outline: none !important;
+    border-color: rgb(29, 155, 240);
+    background-color: rgba(0, 0, 0, 0);
+}
+.input-group:focus-within .explore-input-search,
+.explore-input-search:focus-within .explore-header-search-icon{
+    outline: none !important;
+    border-color: rgb(29, 155, 240);
+    background-color: rgba(0, 0, 0, 0);
+}
+
 .profile-feed-header {
     display: flex;
     align-items: center;
@@ -766,6 +816,46 @@ footer {
 
 .AnonRightSidebar {
     display: none;
+}
+
+.input-search-icon {
+    display: flex;
+    justify-content: center;
+    border-bottom-left-radius: 24px;
+    border-top-left-radius: 24px;
+    border-style: solid none solid solid;
+    border-width: 1px 0 1px 1px;
+    border-color: rgb(239, 243, 244);
+    width: 50px;
+    height: 44px;
+    background-color: rgb(239, 243, 244);
+    color: rgb(83, 100, 113);
+    cursor: pointer;
+}
+.input-search {
+    border-bottom-right-radius: 24px;
+    border-top-right-radius: 24px;
+    border-style: solid solid solid none;
+    border-width: 1px 1px 1px 0;
+    border-color: rgb(239, 243, 244);
+    width: 300px;
+    height: 44px;
+    text-indent: 12px;
+    background-color: rgb(239, 243, 244);
+    color: rgb(83, 100, 113);
+}
+.input-group:focus-within .input-search-icon,
+.input-search-icon:focus-within .input-search {
+    outline: none !important;
+    border-color: rgb(29, 155, 240);
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.input-group:focus-within .input-search,
+.input-search:focus-within .input-search-icon{
+    outline: none !important;
+    border-color: rgb(29, 155, 240);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .right-sidebar-functionality {
